--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@
 
 beautifulsoup4==4.13.4
 joblib==1.5.1
+matplotlib==3.8.0
 numpy==1.26.4
 pandas==2.3.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 python-dotenv==1.1.1
 requests==2.32.4
-scikit-learn==1.7.1
+scikit-learn==1.6.0
+seaborn==0.13.0
 streamlit==1.47.1
