--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Data load/save paths
 CSV_SAVE_LOAD_PATH=./data/
-MODEL_SAVE_LOAD_PATH=./trained_model/
+MODEL_SAVE_LOAD_PATH=./src/backend/model/trained_model/
 
 # Football.co.uk base URL
 BELGIUM_DATA_BASE_URL=https://www.football-data.co.uk/
