--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-# Data load/save paths
+# Data Load/Save Paths
 CSV_SAVE_LOAD_PATH=./data/
 MODEL_SAVE_LOAD_PATH=./src/backend/model/trained_model/
 
-# Football.co.uk base URL
+# Football Data Source
 BELGIUM_DATA_BASE_URL=https://www.football-data.co.uk/
+
+# Dropbox Configuration
+DROPBOX_ACCESS_TOKEN=your_dropbox_access_token
+DROPBOX_REFRESH_TOKEN=your_dropbox_refresh_token
+DROPBOX_APP_KEY=your_dropbox_app_key
+DROPBOX_APP_SECRET=your_dropbox_app_secret
+DROPBOX_TOKEN_URL=https://api.dropbox.com/oauth2/token
+DROPBOX_MODEL_PATH=/models/latest_model.joblib
