--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ google-api-python-client==2.177.0
 joblib==1.5.1
 numpy==1.26.4
 pandas==2.3.1
+plotly==5.24.1
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pytest==8.4.1
